--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 
     "files": [
         "goldsrc/KILL.d.ts",
-        "goldsrc/exports.d.ts"
+        "goldsrc/defs.ts"
     ],
 
     "include": [
