--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"outDir": "js/",
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
-		"strictNullChecks": true,
+		"strictNullChecks": false,
 		"forceConsistentCasingInFileNames": true,
 
 		//"baseUrl": "./goldsrc",
