max paynt.js. fixed missing unpainted cars

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "start": "serve public"
     },
     "dependencies": {
+        "bmp-js": "^0.1.0",
+        "canvas": "^2.6.1",
+        "stackblur-canvas": "^2.2.0",
         "three": "^0.114.0"
     }
 }
